# gradio-i18n

./: .gitignore  README.md  pyproject.toml
example/: basic.py  change_lang.py  translation.yaml
src/gradio_i18n/: __init__.py  i18n.py
