[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradio-i18n"
version = "0.0.8"
authors = [
  { name="Harry Chen", email="hoveychen@gmail.com" },
]
description = "Reactive Multi-language Gradio App with minimal effort"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "gradio"
]

[project.urls]
Homepage = "https://github.com/hoveychen/gradio-i18n"
Issues = "https://github.com/hoveychen/gradio-i18n/issues"
